--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
   },
-  "dependencies": {
-    "@google-cloud/aiplatform": "^3.23.0",
-    "@google/generative-ai": "^0.15.0",
-    "cloudinary": "^2.3.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "uuid": "^8.3.2"
-  }
+"dependencies": {
+  "@vendia/serverless-express": "^4.10.2",
+  "@google/generative-ai": "^0.15.0",
+  "cloudinary": "^2.3.0",
+  "dotenv": "^16.4.5",
+  "express": "^4.19.2",
+  "uuid": "^8.3.2"
+}
+  
 }
