--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "intergalactic-passport",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
+    "next": "14.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@google/generative-ai": "^0.15.0",
     "cloudinary": "^2.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "dotenv": "^16.4.5"
   }
 }
